--- a/src/index.css
+++ b/src/index.css
@@ -54,12 +54,14 @@ body {
 h1 {
 	font-size: 2.5rem;
 	line-height: 48px;
+	padding-left: 16px;
 }
 
 h2 {
 	font-size: 2rem;
 	line-height: 38px;
 	margin-bottom: 24px;
+	padding-left: 16px;
 }
 
 h3 {
